[gd_scene load_steps=9 format=3 uid="uid://b7vy4mu3gq11i"]

[ext_resource type="Script" uid="uid://kelf65fgqfdl" path="res://main_game.gd" id="1_2pltu"]
[ext_resource type="PackedScene" uid="uid://bji8di232jdjt" path="res://coin_button.tscn" id="2_f52ns"]
[ext_resource type="Texture2D" uid="uid://birmy57xu8abv" path="res://art/tile-off-1.png" id="3_l5ukw"]
[ext_resource type="Texture2D" uid="uid://cn7g8lsem25nc" path="res://art/tile-off-2.png" id="4_4srsv"]
[ext_resource type="Texture2D" uid="uid://ds2yywnmd578p" path="res://art/tile-off-3.png" id="5_mf81u"]
[ext_resource type="Texture2D" uid="uid://blvxpyktkkmhm" path="res://art/tile-off-4.png" id="6_02kkc"]
[ext_resource type="Script" uid="uid://cqs0lu3rah5x7" path="res://rich_text_label.gd" id="7_f52ns"]
[ext_resource type="Script" uid="uid://b7q616wkewk1h" path="res://go_button.gd" id="8_l5ukw"]

[node name="MainGame" type="Node"]
script = ExtResource("1_2pltu")

[node name="GameTitle" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = 3.0
offset_right = 182.5
offset_bottom = 99.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 48
text = "A Coin Chance"

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -290.0
offset_top = 150.0
offset_right = 449.99994
offset_bottom = 948.74994
grow_horizontal = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="CoinButton" parent="GridContainer" instance=ExtResource("2_f52ns")]
layout_mode = 2
texture_normal = ExtResource("3_l5ukw")
coin_number = 1

[node name="CoinButton2" parent="GridContainer" instance=ExtResource("2_f52ns")]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture_normal = ExtResource("4_4srsv")
coin_number = 2

[node name="CoinButton3" parent="GridContainer" instance=ExtResource("2_f52ns")]
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("5_mf81u")
coin_number = 3

[node name="CoinButton4" parent="GridContainer" instance=ExtResource("2_f52ns")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("6_02kkc")
coin_number = 4

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 29.0
offset_top = 855.0
offset_right = 733.0
offset_bottom = 1064.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 24
text = "SELECTED: 1 3
NEXT PROBABILITY: 25 %
----------------------
Player: 0
Machine: 0"
script = ExtResource("7_f52ns")

[node name="GoButton" type="Button" parent="."]
offset_left = 183.0
offset_top = 1115.0
offset_right = 591.0
offset_bottom = 1305.0
theme_override_font_sizes/font_size = 64
text = "GO!"
script = ExtResource("8_l5ukw")

[connection signal="pressed" from="GoButton" to="." method="_on_go_button_pressed"]
